# Mobius-Systems

./: .env.mobius-services  .npmrc  .pre-commit-config.yaml  ARCHITECTURE.md  C123_IMPLEMENTATION_SUMMARY.md  C126_VERCEL_BUILD_FIX.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KAIZEN_OS_PROBLEM_ANALYSIS.md  MIGRATION.md  PR_SUMMARY.md  README.md  SECURITY.md  TESTING.md  codexrule.md  codexrule.yml  cycle.json  env.example  kaizen_manifest.yaml  mkdocs.yml  opencode.config.yaml  opencode.yaml  package-lock.json  package.json  turbo.json
.badges/: agent-ci.json  cycle.json  verdict.json
.changeset/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  codex-policy.yml
.opencode/: profile_card.yaml  workflow-template.yaml
.well-known/: mobius.json
FOUNDATION/: BYLAWS.md  CHARTER.md  GOVERNANCE.md
STATE/: CYCLE.txt  VERDICT.txt
agents/: agent.schema.json
attestations/: mii.json
badges/: agent-ci.json  mii.json  (+2 more)
services/echo-sentinel/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/echo-sentinel/.github/workflows/: ci.yml
services/echo-sentinel/app/: __init__.py  config.py  ingest.py  integrity.py  ledger.py  main.py  models.py  scoring.py
services/echo-sentinel/app/sources/: __init__.py  ap.py  base.py  bis.py  bloomberg.py  ecb.py  eu_cp.py  fema.py  nasa.py  reuters.py  typing.py  who.py
services/echo-sentinel/echo_sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/echo-sentinel/tests/: test_cross_verify.py  test_scoring.py
(+764 files in other folders)
